--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
-    <script src="trafficSimDisplayVersion.js"></script>
+    <script src="trafficSim.js"></script>
   </head>
   <body>
   </body>
